Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1175

[C++] Fix usage of deprecated Arrow API

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.4.0
    • parquet-cpp
    • None

    Description

      FAILED: CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o 
      ccache /usr/bin/clang++-4.0  -DHAVE_INTTYPES_H -DHAVE_NETDB_H -DHAVE_NETINET_IN_H -I../src -isystem /home/wesm/cpp-toolchain/include -isystem /home/wesm/cpp-toolchain/include/thrift -isystem /home/wesm/local/include -Werror -DARROW_NO_DEPRECATED_API  -ggdb -O0 -fno-strict-aliasing -Wall -Qunused-arguments  -g -fPIC   -fPIC -std=gnu++11 -MD -MT CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o -MF CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o.d -o CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o -c ../src/parquet/arrow/reader.cc
      ../src/parquet/arrow/reader.cc:871:39: error: no member named 'ShallowCopy' in 'arrow::ArrayData'
            auto new_data = (*out)->data()->ShallowCopy();
                            ~~~~~~~~~~~~~~  ^
      1 error generated.
      [15/25] Building CXX object CMakeFiles/parquet_objlib.dir/src/parquet/file/metadata.cc.o
      ninja: build stopped: subcommand failed.
      [7/12] Building CXX object CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o
      FAILED: CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o 
      ccache /usr/bin/clang++-4.0  -DHAVE_INTTYPES_H -DHAVE_NETDB_H -DHAVE_NETINET_IN_H -I../src -isystem /home/wesm/cpp-toolchain/include -isystem /home/wesm/cpp-toolchain/include/thrift -isystem /home/wesm/local/include -Werror -DARROW_NO_DEPRECATED_API  -ggdb -O0 -fno-strict-aliasing -Wall -Qunused-arguments  -g -fPIC   -fPIC -std=gnu++11 -MD -MT CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o -MF CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o.d -o CMakeFiles/parquet_objlib.dir/src/parquet/arrow/reader.cc.o -c ../src/parquet/arrow/reader.cc
      ../src/parquet/arrow/reader.cc:871:39: error: no member named 'ShallowCopy' in 'arrow::ArrayData'
            auto new_data = (*out)->data()->ShallowCopy();
                            ~~~~~~~~~~~~~~  ^
      1 error generated.
      [8/12] Building CXX object CMakeFiles/parquet_objlib.dir/src/parquet/parquet_types.cpp.o
      ninja: build stopped: subcommand failed.
      ~/code/arrow/python ~/code/parquet-cpp/library-build ~/code/arrow/python
      

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: